Switch senior editor to site manager

--- a/config/sync/user.role.site_manager.yml
+++ b/config/sync/user.role.site_manager.yml
@@ -1,12 +1,10 @@
-uuid: 31da6aa0-4cc2-4ab6-8f55-21f8ad91a8c2
+uuid: 86303883-12ab-4970-9864-5eca338bd46f
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: '-tA6dcROdf0p4fR5IDPlsoqG6_ZIRaOC6M-6Blj0VS4'
-id: senior_editor
-label: 'Senior Editor'
-weight: 3
+id: site_manager
+label: 'Site Manager'
+weight: 5
 is_admin: null
 permissions:
   - 'access administration pages'
@@ -17,40 +15,18 @@ permissions:
   - 'access image_browser entity browser pages'
   - 'access in-place editing'
   - 'access media overview'
-  - 'access panels in-place editing'
   - 'access site reports'
   - 'access taxonomy overview'
-  - 'access toolbar'
   - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'access webform overview'
-  - 'access webform submission log'
-  - 'add content to books'
   - 'administer blocks'
-  - 'administer book outlines'
-  - 'administer comments'
-  - 'administer contact forms'
   - 'administer menu'
-  - 'administer pages'
-  - 'administer panelizer node blog content'
-  - 'administer panelizer node blog layout'
-  - 'administer panelizer node event content'
-  - 'administer panelizer node event layout'
-  - 'administer panelizer node landing_page content'
-  - 'administer panelizer node landing_page layout'
-  - 'administer panelizer node news content'
-  - 'administer panelizer node news layout'
-  - 'administer panelizer node page content'
-  - 'administer panelizer node page layout'
-  - 'administer panelizer node profiles content'
-  - 'administer panelizer node profiles layout'
-  - 'administer paragraphs library'
   - 'administer redirects'
   - 'administer url aliases'
   - 'administer users'
   - 'administer webform element access'
   - 'administer webform submission'
-  - 'bypass honeypot protection'
   - 'cancel account'
   - 'change own username'
   - 'configure editable landing_page node layout overrides'
@@ -60,36 +36,21 @@ permissions:
   - 'create image media'
   - 'create landing_page content'
   - 'create media'
-  - 'create new books'
   - 'create news content'
   - 'create page content'
   - 'create paragraph content accordion_group'
   - 'create paragraph content accordion_item'
   - 'create paragraph content basic_page_section'
   - 'create paragraph content block_placer'
-  - 'create paragraph content buttons'
-  - 'create paragraph content event_by_category'
   - 'create paragraph content form'
-  - 'create paragraph content from_library'
   - 'create paragraph content gallery'
   - 'create paragraph content horizontal_rule'
   - 'create paragraph content image'
   - 'create paragraph content landing_page_section'
-  - 'create paragraph content lightbox_gallery'
   - 'create paragraph content links_files'
-  - 'create paragraph content map'
-  - 'create paragraph content mosaic_gallery'
-  - 'create paragraph content news_by_category'
   - 'create paragraph content pullquote'
-  - 'create paragraph content reveal_group'
-  - 'create paragraph content reveal_section'
-  - 'create paragraph content slideshow'
-  - 'create paragraph content social_media'
-  - 'create paragraph content social_platform'
   - 'create paragraph content text'
-  - 'create paragraph content tile_image'
   - 'create paragraph content video'
-  - 'create paragraph library item'
   - 'create profiles content'
   - 'create terms in categories'
   - 'create terms in media_categories'
@@ -132,32 +93,18 @@ permissions:
   - 'delete paragraph content accordion_item'
   - 'delete paragraph content basic_page_section'
   - 'delete paragraph content block_placer'
-  - 'delete paragraph content buttons'
-  - 'delete paragraph content event_by_category'
   - 'delete paragraph content form'
-  - 'delete paragraph content from_library'
   - 'delete paragraph content gallery'
   - 'delete paragraph content horizontal_rule'
   - 'delete paragraph content image'
   - 'delete paragraph content landing_page_section'
-  - 'delete paragraph content lightbox_gallery'
   - 'delete paragraph content links_files'
-  - 'delete paragraph content map'
-  - 'delete paragraph content mosaic_gallery'
-  - 'delete paragraph content news_by_category'
   - 'delete paragraph content pullquote'
-  - 'delete paragraph content reveal_group'
-  - 'delete paragraph content reveal_section'
-  - 'delete paragraph content slideshow'
-  - 'delete paragraph content social_media'
-  - 'delete paragraph content social_platform'
   - 'delete paragraph content text'
-  - 'delete paragraph content tile_image'
   - 'delete paragraph content video'
   - 'delete profiles revisions'
   - 'delete terms in categories'
   - 'delete terms in media_categories'
-  - 'delete terms in position'
   - 'delete terms in tags'
   - 'edit any blog content'
   - 'edit any document media'
@@ -171,7 +118,6 @@ permissions:
   - 'edit any webform'
   - 'edit any webform submission'
   - 'edit own blog content'
-  - 'edit own comments'
   - 'edit own document media'
   - 'edit own event content'
   - 'edit own image media'
@@ -182,12 +128,9 @@ permissions:
   - 'edit own video media'
   - 'edit own webform'
   - 'edit own webform submission'
-  - 'edit paragraph library item'
   - 'edit terms in categories'
   - 'edit terms in media_categories'
-  - 'edit terms in position'
   - 'edit terms in tags'
-  - 'post comments'
   - 'revert all revisions'
   - 'revert blog revisions'
   - 'revert event revisions'
@@ -195,7 +138,6 @@ permissions:
   - 'revert news revisions'
   - 'revert page revisions'
   - 'revert profiles revisions'
-  - 'skip comment approval'
   - 'switch shortcut sets'
   - 'update any media'
   - 'update media'
@@ -203,46 +145,25 @@ permissions:
   - 'update paragraph content accordion_item'
   - 'update paragraph content basic_page_section'
   - 'update paragraph content block_placer'
-  - 'update paragraph content buttons'
-  - 'update paragraph content event_by_category'
   - 'update paragraph content form'
-  - 'update paragraph content from_library'
   - 'update paragraph content gallery'
   - 'update paragraph content horizontal_rule'
   - 'update paragraph content image'
   - 'update paragraph content landing_page_section'
-  - 'update paragraph content lightbox_gallery'
   - 'update paragraph content links_files'
-  - 'update paragraph content map'
-  - 'update paragraph content mosaic_gallery'
-  - 'update paragraph content news_by_category'
   - 'update paragraph content pullquote'
-  - 'update paragraph content reveal_group'
-  - 'update paragraph content reveal_section'
-  - 'update paragraph content slideshow'
-  - 'update paragraph content social_media'
-  - 'update paragraph content social_platform'
   - 'update paragraph content text'
-  - 'update paragraph content tile_image'
   - 'update paragraph content video'
   - 'use add another'
-  - 'use advanced search'
-  - 'use ipe with page manager'
-  - 'use panels dashboard'
-  - 'use text format full_html'
   - 'view all media revisions'
   - 'view all revisions'
   - 'view any webform submission'
   - 'view blog revisions'
-  - 'view disqus comments'
   - 'view event revisions'
   - 'view landing_page revisions'
   - 'view news revisions'
   - 'view own unpublished content'
   - 'view own webform submission'
   - 'view page revisions'
-  - 'view pane admin links'
-  - 'view paragraph content from_library'
-  - 'view paragraph content pullquote'
   - 'view profiles revisions'
   - 'view the administration theme'
