--- a/config/sync/field.field.paragraph.landing_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.landing_page_section.field_section_widgets.yml
@@ -87,4 +87,7 @@ settings:
       view_placer:
         enabled: true
         weight: -18
+      from_library:
+        weight: 21
+        enabled: false
 field_type: entity_reference_revisions
