--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,7 @@
     "drupal/media_entity_image": "^1.2",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
-    "drupal/paragraphs": "^1.5",
+    "drupal/paragraphs": "1.8",
     "drupal/pathauto": "^1.3",
     "drupal/pathologic": "1.x-dev",
     "drupal/quicklink": "^1.1",
@@ -205,6 +205,9 @@
         "Enable menu block by page functionality": "https://www.drupal.org/files/issues/2018-08-08/menu_block-follow-2756675-55.patch",
         "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
+      },
+      "drupal/paragraphs": {
+        "Call to member function missing label": "https://www.drupal.org/files/issues/2019-08-11/paragraphs-call_id_on_null-2948778-16.patch"
       }
     },
     "enable-patching": true
