--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -63,7 +63,7 @@ content:
       title_plural: Paragraphs
       edit_mode: closed
       closed_mode: preview
-      autocollapse: all
+      autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
