--- a/config/sync/core.entity_view_display.paragraph.accordion_group.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.accordion_group.preview.yml
@@ -5,14 +5,13 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.accordion_group.field_accordion_item
-    - field.field.paragraph.accordion_group.field_admin_description
     - field.field.paragraph.accordion_group.field_widget_title
     - paragraphs.paragraphs_type.accordion_group
   module:
+    - entity_reference_revisions
     - layout_builder
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -22,14 +21,15 @@ targetEntityType: paragraph
 bundle: accordion_group
 mode: preview
 content:
-  field_admin_description:
+  field_accordion_item:
+    type: entity_reference_revisions_entity_view
     weight: 0
+    region: content
     label: hidden
     settings:
-      link_to_entity: false
+      view_mode: preview
+      link: ''
     third_party_settings: {  }
-    type: string
-    region: content
 hidden:
-  field_accordion_item: true
   field_widget_title: true
+  search_api_excerpt: true
