--- a/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
@@ -11,7 +11,6 @@ dependencies:
     - layout_builder
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -25,9 +24,10 @@ content:
     type: string
     weight: 0
     region: content
-    label: hidden
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
   field_long_text: true
+  search_api_excerpt: true
