--- a/config/sync/core.entity_view_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.basic_page_section.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.basic_page_section.field_admin_description
     - field.field.paragraph.basic_page_section.field_section_intro
     - field.field.paragraph.basic_page_section.field_section_title
     - field.field.paragraph.basic_page_section.field_section_widgets
@@ -47,4 +46,4 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
 hidden:
-  field_admin_description: true
+  search_api_excerpt: true
