--- a/config/sync/core.entity_view_display.paragraph.block_placer.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.block_placer.preview.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.block_placer.field_admin_description
     - field.field.paragraph.block_placer.field_block
     - field.field.paragraph.block_placer.field_widget_title
     - paragraphs.paragraphs_type.block_placer
@@ -12,7 +11,6 @@ dependencies:
     - layout_builder
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 id: paragraph.block_placer.preview
@@ -20,14 +18,14 @@ targetEntityType: paragraph
 bundle: block_placer
 mode: preview
 content:
-  field_admin_description:
+  field_block:
+    type: entity_reference_label
     weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
+    label: inline
+    settings:
+      link: false
+    third_party_settings: {  }
 hidden:
-  field_block: true
   field_widget_title: true
+  search_api_excerpt: true
