--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.gallery.field_admin_description
     - field.field.paragraph.gallery.field_gallery_type
     - field.field.paragraph.gallery.field_image_multi
     - field.field.paragraph.gallery.field_widget_title
@@ -46,4 +45,4 @@ content:
     type: string
     region: content
 hidden:
-  field_admin_description: true
+  search_api_excerpt: true
