--- a/config/sync/core.entity_view_display.paragraph.gallery.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.preview.yml
@@ -4,16 +4,16 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.gallery.field_admin_description
     - field.field.paragraph.gallery.field_gallery_type
     - field.field.paragraph.gallery.field_image_multi
     - field.field.paragraph.gallery.field_widget_title
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.gallery
   module:
     - layout_builder
+    - media
 third_party_settings:
   layout_builder:
-    sections: {  }
     allow_custom: false
     enabled: false
 id: paragraph.gallery.preview
@@ -21,16 +21,8 @@ targetEntityType: paragraph
 bundle: gallery
 mode: preview
 content:
-  field_admin_description:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_gallery_type:
-    weight: 1
+    weight: 0
     label: inline
     settings:
       format: default
@@ -39,6 +31,15 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
+  field_image_multi:
+    type: media_thumbnail
+    weight: 1
+    region: content
+    label: inline
+    settings:
+      image_style: thumbnail
+      image_link: ''
+    third_party_settings: {  }
 hidden:
-  field_image_multi: true
   field_widget_title: true
+  search_api_excerpt: true
