--- a/config/sync/core.entity_view_display.paragraph.image.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.image.field_admin_description
     - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_size
     - field.field.paragraph.image.field_link
@@ -62,4 +61,4 @@ content:
     type: string
     region: content
 hidden:
-  field_admin_description: true
+  search_api_excerpt: true
