--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -4,17 +4,17 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.image.field_admin_description
     - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_size
     - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.image
   module:
     - layout_builder
+    - media
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -24,16 +24,17 @@ targetEntityType: paragraph
 bundle: image
 mode: preview
 content:
-  field_admin_description:
-    type: string
+  field_image:
+    type: media_thumbnail
     weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
     region: content
+    label: inline
+    settings:
+      image_style: thumbnail
+      image_link: ''
+    third_party_settings: {  }
 hidden:
-  field_image: true
   field_image_size: true
   field_link: true
   field_widget_title: true
+  search_api_excerpt: true
