--- a/config/sync/core.entity_view_display.paragraph.links_files.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.links_files.preview.yml
@@ -4,16 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.links_files.field_admin_description
     - field.field.paragraph.links_files.field_file_multi
     - field.field.paragraph.links_files.field_link_multi
     - field.field.paragraph.links_files.field_widget_title
     - paragraphs.paragraphs_type.links_files
   module:
     - layout_builder
+    - link
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -23,15 +22,27 @@ targetEntityType: paragraph
 bundle: links_files
 mode: preview
 content:
-  field_admin_description:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
+  field_file_multi:
+    type: entity_reference_entity_view
+    weight: 1
     region: content
+    label: inline
+    settings:
+      link: true
+      view_mode: default
+    third_party_settings: {  }
+  field_link_multi:
+    type: link
+    weight: 0
+    region: content
+    label: inline
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
 hidden:
-  field_file_multi: true
-  field_link_multi: true
   field_widget_title: true
+  search_api_excerpt: true
