--- a/config/sync/core.entity_view_display.paragraph.pullquote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.pullquote.field_admin_description
     - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
@@ -47,4 +46,4 @@ content:
     type: string
     region: content
 hidden:
-  field_admin_description: true
+  search_api_excerpt: true
