--- a/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
@@ -4,16 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.pullquote.field_admin_description
     - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
   module:
     - layout_builder
+    - text
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -23,15 +22,15 @@ targetEntityType: paragraph
 bundle: pullquote
 mode: preview
 content:
-  field_admin_description:
+  field_quote:
+    type: text_trimmed
     weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
+    label: inline
+    settings:
+      trim_length: 140
+    third_party_settings: {  }
 hidden:
-  field_quote: true
   field_source: true
   field_widget_title: true
+  search_api_excerpt: true
