--- a/config/sync/core.entity_view_display.paragraph.text.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.text.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.text.field_admin_description
     - field.field.paragraph.text.field_long_text
     - field.field.paragraph.text.field_widget_title
     - paragraphs.paragraphs_type.text
@@ -12,7 +11,6 @@ dependencies:
     - text
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -38,4 +36,4 @@ content:
     type: string
     region: content
 hidden:
-  field_admin_description: true
+  search_api_excerpt: true
