--- a/config/sync/core.entity_view_display.paragraph.text.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.text.preview.yml
@@ -4,15 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.text.field_admin_description
     - field.field.paragraph.text.field_long_text
     - field.field.paragraph.text.field_widget_title
     - paragraphs.paragraphs_type.text
   module:
     - layout_builder
+    - text
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -22,14 +21,14 @@ targetEntityType: paragraph
 bundle: text
 mode: preview
 content:
-  field_admin_description:
+  field_long_text:
+    type: text_trimmed
     weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
+    label: inline
+    settings:
+      trim_length: 140
+    third_party_settings: {  }
 hidden:
-  field_long_text: true
   field_widget_title: true
+  search_api_excerpt: true
