--- a/config/sync/core.entity_view_display.paragraph.video.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.preview.yml
@@ -4,15 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.video.field_admin_description
     - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_widget_title
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.video
   module:
     - layout_builder
+    - media
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -22,14 +22,15 @@ targetEntityType: paragraph
 bundle: video
 mode: preview
 content:
-  field_admin_description:
+  field_video:
+    type: media_thumbnail
     weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
+    label: inline
+    settings:
+      image_style: thumbnail
+      image_link: ''
+    third_party_settings: {  }
 hidden:
-  field_video: true
   field_widget_title: true
+  search_api_excerpt: true
