--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -113,6 +113,7 @@ theme:
   classy: 0
   seven: 0
   citizen_patterns: 0
+  crane: 0
 profile: oc
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
