--- a/config/sync/core.entity_view_display.paragraph.gallery.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.preview.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.paragraph.gallery.field_gallery_type
     - field.field.paragraph.gallery.field_image_multi
     - field.field.paragraph.gallery.field_widget_title
-    - image.style.thumbnail
+    - image.style.paragraph_preview
     - paragraphs.paragraphs_type.gallery
   module:
     - layout_builder
@@ -35,9 +35,9 @@ content:
     type: media_thumbnail
     weight: 1
     region: content
-    label: inline
+    label: hidden
     settings:
-      image_style: thumbnail
+      image_style: paragraph_preview
       image_link: ''
     third_party_settings: {  }
 hidden:
