--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.paragraph.image.field_image_size
     - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
-    - image.style.thumbnail
+    - image.style.paragraph_preview
     - paragraphs.paragraphs_type.image
   module:
     - layout_builder
@@ -30,7 +30,7 @@ content:
     region: content
     label: inline
     settings:
-      image_style: thumbnail
+      image_style: paragraph_preview
       image_link: ''
     third_party_settings: {  }
 hidden:
