--- a/web/themes/crane/crane.libraries.yml
+++ b/web/themes/crane/crane.libraries.yml
@@ -2,8 +2,10 @@ global:
   version: 1.0
   css:
     theme:
+      js/select2/select2.min.css: {}
       css/crane.css: {}
   js:
+    js/select2/select2.min.js: {}
     js/crane.js: {}
   dependencies:
     - core/drupal
