--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.yml
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.yml
@@ -1,8 +1,8 @@
 widget_title:
-  "Lightbox Widget"
+  "Gallery Widget"
 
 gallery_type:
-    "Lightbox"
+  "lightbox"
 
 #images thumb_src and large_src will be replaced with drupal images and need to have their sizes set manually
 images:
