--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
     "drupal/pathologic": "1.x-dev",
     "drupal/quicklink": "^1.1",
     "drupal/redirect": "^1.3",
+    "drupal/responsive_preview": "^1.0@beta",
     "drupal/search_api": "^1.10",
     "drupal/stage_file_proxy": "^1.0@alpha",
     "drupal/structure_sync": "^1.14",
