--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -27,6 +27,7 @@ module:
   default_content: 0
   dynamic_page_cache: 0
   easy_breadcrumb: 0
+  ec_preview: 0
   editor: 0
   embed: 0
   entity: 0
@@ -76,6 +77,7 @@ module:
   rdf: 0
   redirect: 0
   responsive_image: 0
+  responsive_preview: 0
   search_api: 0
   search_api_db: 0
   serialization: 0
