--- a/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
@@ -19,7 +19,7 @@ id: paragraph.basic_page_section.field_section_widgets
 field_name: field_section_widgets
 entity_type: paragraph
 bundle: basic_page_section
-label: 'Section Widgets'
+label: 'Widgets in this Section'
 description: ''
 required: true
 translatable: true
