--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -49,13 +49,13 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 10
+          items_per_page: 8
           offset: 0
           id: 0
           total_pages: null
           tags:
-            previous: ‹‹
-            next: ››
+            previous: "«\_Prev"
+            next: "Next\_»"
             first: '« First'
             last: 'Last »'
           expose:
@@ -66,7 +66,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          quantity: 9
+          quantity: 5
       style:
         type: default
       row:
@@ -283,7 +283,17 @@ display:
           tokenize: false
           content: '<h2 class="results-header">Search Results</h2>'
           plugin_id: text_custom
-      footer: {  }
+      footer:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: "<span class=\"results-count\">Results: @start - @end of @total</span>\r\n<span class=\"count-shim\">@page_count</span>"
+          plugin_id: result
       empty:
         area:
           id: area
