--- a/config/sync/block.block.crane_local_actions.yml
+++ b/config/sync/block.block.crane_local_actions.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: PmnIbG5xqKopVIejW-q8GfaQIfxwhA6-AYr8oTSAU2Y
 id: crane_local_actions
 theme: crane
-region: content
-weight: -3
+region: header
+weight: -1
 provider: null
 plugin: local_actions_block
 settings:
