--- a/config/sync/core.entity_view_display.media.image.thumbnail_cropped.yml
+++ b/config/sync/core.entity_view_display.media.image.thumbnail_cropped.yml
@@ -1,38 +1,38 @@
-uuid: 7b68c9bd-c6fc-4da1-bc06-d068ca231363
+uuid: 1fd9aca1-6e66-4d2b-9a32-c9c71bb2628c
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.thumbnail_cropped
     - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
+    - responsive_image.styles.thumbnail_cropped
   module:
-    - image
-id: media.image.default
+    - layout_builder
+    - responsive_image
+third_party_settings:
+  layout_builder:
+    allow_custom: false
+    enabled: false
+id: media.image.thumbnail_cropped
 targetEntityType: media
 bundle: image
-mode: default
+mode: thumbnail_cropped
 content:
-  field_caption:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_media_image:
-    type: image
+    type: responsive_image
     weight: 0
     region: content
     label: hidden
     settings:
-      image_style: ''
+      responsive_image_style: thumbnail_cropped
       image_link: ''
     third_party_settings: {  }
 hidden:
   created: true
+  field_caption: true
   field_media_categories: true
   name: true
   search_api_excerpt: true
