--- a/web/themes/crane/crane.libraries.yml
+++ b/web/themes/crane/crane.libraries.yml
@@ -16,4 +16,8 @@ fonts:
   version: 1.0
   css:
     base:
-       https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap: { type: external, preprocess: false }  
+       https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap: { type: external, preprocess: false }
+views-filters:
+  version: 1.0
+  js:
+    js/views-filters.js: {}
