--- a/web/profiles/oc/oc.info.yml
+++ b/web/profiles/oc/oc.info.yml
@@ -1,4 +1,4 @@
-name: Electric Citizen
+name: Electric Citizen (OC)
 type: profile
 description: 'Pre-configured install for Electric Citizen site builds.'
 version: 1.0
