--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -72,6 +72,7 @@ module:
   paragraphs_type_permissions: 0
   path: 0
   pathologic: 0
+  profile_switcher: 0
   quickedit: 0
   quicklink: 0
   rdf: 0
@@ -109,13 +110,13 @@ module:
   xmlsitemap: 1
   views: 10
   paragraphs: 11
-  oc: 1000
+  citizen: 1000
 theme:
   stable: 0
   classy: 0
   seven: 0
   citizen_patterns: 0
   crane: 0
-profile: oc
+profile: citizen
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
