--- a/composer.json
+++ b/composer.json
@@ -179,6 +179,9 @@
       ".docksal": ["type:drupal-custom-module"]
     },
     "build-env": {
+      "install-cms": [
+        "drush site-install citizen --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes"
+      ],
       "export-configuration": "drush config-export --yes"
     },
     "drupal-scaffold": {
