UP-00: Add entity_embed 3069448-17.patch

--- a/composer.json
+++ b/composer.json
@@ -212,6 +212,9 @@
       },
       "drupal/paragraphs": {
         "Call to member function missing label": "https://www.drupal.org/files/issues/2019-08-11/paragraphs-call_id_on_null-2948778-16.patch"
+      },
+      "drupal/entity_embed": {
+        "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-09-02/entity-embed-array-to-string--3069448-17.patch"
       }
     },
     "enable-patching": true
