--- a/composer.json
+++ b/composer.json
@@ -76,10 +76,10 @@
     "drupal/entity": "^1.0.0-rc1",
     "drupal/entity_browser": "^2.0.0",
     "drupal/entity_embed": "1.x-dev",
-    "drupal/entity_reference_revisions": "1.6.0",
+    "drupal/entity_reference_revisions": "^1.6.0",
     "drupal/entity_usage": "^2.0@beta",
     "drupal/extlink": "^1.1",
-    "drupal/field_group": "^1.0@RC",
+    "drupal/field_group": "^3.0",
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "^1.0",
     "drupal/geolocation": "^1.11",
@@ -97,7 +97,7 @@
     "drupal/media_entity_image": "^1.2",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
-    "drupal/paragraphs": "1.8",
+    "drupal/paragraphs": "^1.8",
     "drupal/pathauto": "^1.3",
     "drupal/pathologic": "1.x-dev",
     "drupal/quicklink": "^1.1",
@@ -210,11 +210,11 @@
         "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
       },
-      "drupal/paragraphs": {
-        "Call to member function missing label": "https://www.drupal.org/files/issues/2019-08-11/paragraphs-call_id_on_null-2948778-16.patch"
-      },
       "drupal/entity_embed": {
         "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-09-02/entity-embed-array-to-string--3069448-17.patch"
+      },
+      "drupal/field_group": {
+        "Incompatibility with inline entity form": "https://www.drupal.org/files/issues/2018-10-30/field_group-inline_entity_form_compatibility-2986704-3.patch"
       }
     },
     "enable-patching": true
