Test performance config split

--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -88,6 +89,7 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 1
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -127,6 +129,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 1
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -142,6 +145,7 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+        third_party_settings: {  }
     allow_custom: false
     is_enabled: true
     enabled: true
@@ -221,3 +225,4 @@ content:
     third_party_settings: {  }
 hidden:
   addtoany: true
+  search_api_excerpt: true
