Paragraphs patch, dev config split

--- a/composer.json
+++ b/composer.json
@@ -213,6 +213,9 @@
       "drupal/entity_embed": {
         "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-09-02/entity-embed-array-to-string--3069448-17.patch"
       },
+      "drupal/paragraphs": {
+        "Call to member function missing label": "https://www.drupal.org/files/issues/2019-08-08/paragraphs-call_id_on_null-2948778-15.patch"
+      },
       "drupal/field_group": {
         "Incompatibility with inline entity form": "https://www.drupal.org/files/issues/2018-10-30/field_group-inline_entity_form_compatibility-2986704-3.patch"
       }
