--- a/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
@@ -38,10 +38,15 @@ content:
       title_plural: Paragraphs
       edit_mode: closed
       closed_mode: preview
-      autocollapse: all
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
     type: paragraphs
     region: content
