--- a/web/themes/citizen_patterns/citizen_patterns.layouts.yml
+++ b/web/themes/citizen_patterns/citizen_patterns.layouts.yml
@@ -37,3 +37,14 @@ two_column_sidebar:
       label: Content
     sidebar:
       label: Sidebar
+tabs:
+  label: Tabs
+  category: Crane Layouts
+  path: templates/layout
+  template: layout--tabs
+  default_region: tabs
+  icon_map:
+    - [tabs]
+  regions:
+    tabs:
+      label: Tabs
