--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -4,12 +4,32 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.background_image
+    - field.field.user.user.field_first_name
+    - field.field.user.user.field_last_name
     - field.field.user.user.field_user_image
-    - field.field.user.user.field_user_quick_links
   module:
     - entity_browser_entity_form
+    - field_group
     - inline_entity_form
     - user
+third_party_settings:
+  field_group:
+    group_user_personalization:
+      children:
+        - field_first_name
+        - field_last_name
+        - field_user_image
+      parent_name: ''
+      weight: 5
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: true
+        required_fields: true
+      label: 'User Personalization'
+      region: content
 _core:
   default_config_hash: cAoTuTfmGrGB_89qPV_cTRlA7NXOWtLCLePKVX4SO3A
 id: user.user.default
@@ -25,8 +45,24 @@ content:
   contact:
     weight: 5
     region: content
+  field_first_name:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_last_name:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_user_image:
-    weight: 1
+    weight: 5
     settings:
       form_mode: background_image
       label_singular: ''
@@ -43,8 +79,12 @@ content:
         entity_browser_id: image_browser
     type: inline_entity_form_complex
     region: content
+  google_analytics:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
-  field_user_quick_links: true
   language: true
   path: true
   timezone: true
