--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.user.compact
     - field.field.user.user.field_user_image
-    - field.field.user.user.field_user_quick_links
   module:
     - layout_builder
     - layout_discovery
@@ -29,5 +28,5 @@ content: {  }
 hidden:
   field_authored_placeholder: true
   field_user_image: true
-  field_user_quick_links: true
   member_for: true
+  search_api_excerpt: true
