--- a/config/sync/field.storage.user.field_last_name.yml
+++ b/config/sync/field.storage.user.field_last_name.yml
@@ -1,11 +1,11 @@
-uuid: db966991-0d25-49cf-aed9-124f63173609
+uuid: 8a3e5d10-bf06-40bc-b593-069fd8af1465
 langcode: en
 status: true
 dependencies:
   module:
     - user
-id: user.field_user_quick_links
-field_name: field_user_quick_links
+id: user.field_last_name
+field_name: field_last_name
 entity_type: user
 type: string
 settings:
