--- a/config/sync/paragraphs.paragraphs_type.pullquote.yml
+++ b/config/sync/paragraphs.paragraphs_type.pullquote.yml
@@ -1,13 +1,11 @@
 uuid: ef1409da-48fc-48b1-901b-2570407b77f9
 langcode: en
 status: true
-dependencies:
-  content:
-    - 'file:file:ff1d5535-d91c-4ca3-a60f-9cc76a45e1c5'
+dependencies: {  }
 _core:
   default_config_hash: gDuVmsYqqJ5O0fWK-BtniYeLfxlreTdd_nxfJ6gxsgk
 id: pullquote
 label: Pullquote
-icon_uuid: ff1d5535-d91c-4ca3-a60f-9cc76a45e1c5
+icon_uuid: null
 description: 'Displays text with stylized quotation marks and an optional source'
 behavior_plugins: {  }
