--- a/config/sync/paragraphs.paragraphs_type.video.yml
+++ b/config/sync/paragraphs.paragraphs_type.video.yml
@@ -1,13 +1,11 @@
 uuid: 748367d3-a8d9-4ba2-b01f-f98cacc0e44a
 langcode: en
 status: true
-dependencies:
-  content:
-    - 'file:file:20d5d2e0-efbf-468c-abfc-b023ed6e1870'
+dependencies: {  }
 _core:
   default_config_hash: vnFORggcCGo3wRaEO0xMnmqJcK9qm1lCtVO69bl0lbs
 id: video
 label: Video
-icon_uuid: 20d5d2e0-efbf-468c-abfc-b023ed6e1870
+icon_uuid: null
 description: 'Display a responsive Youtube or Vimeo video from the web or media library'
 behavior_plugins: {  }
