--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -65,7 +65,17 @@ permissions:
   - 'create url aliases'
   - 'create video media'
   - 'create webform'
+  - 'delete any blog content'
+  - 'delete any event content'
+  - 'delete any landing_page content'
+  - 'delete any news content'
+  - 'delete any page content'
+  - 'delete any profiles content'
+  - 'delete blog revisions'
+  - 'delete event revisions'
+  - 'delete landing_page revisions'
   - 'delete media'
+  - 'delete news revisions'
   - 'delete own blog content'
   - 'delete own document media'
   - 'delete own event content'
@@ -77,6 +87,7 @@ permissions:
   - 'delete own video media'
   - 'delete own webform'
   - 'delete own webform submission'
+  - 'delete page revisions'
   - 'delete paragraph content accordion_group'
   - 'delete paragraph content accordion_item'
   - 'delete paragraph content basic_page_section'
@@ -103,6 +114,7 @@ permissions:
   - 'delete paragraph content text'
   - 'delete paragraph content tile_image'
   - 'delete paragraph content video'
+  - 'delete profiles revisions'
   - 'edit any blog content'
   - 'edit any document media'
   - 'edit any event content'
